# book-api

./: .flake8  AGENTS.md  CHANGELOG.md  Makefile  README.md  ]  alembic.ini  books.db  pyproject.toml
.github/workflows/: semantic-pr.yaml  test.yaml
alembic/: env.py
alembic/data/: books.json
alembic/versions/: 7fe41ee54540_.py
book_api/: crud.py  database.py  main.py  models.py  schemas.py
book_api/routers/: books.py
tests/: test_books.py
